@startuml
'https://plantuml.com/class-diagram

class MovieService {
    + fetchPopularMoviesFromTMDb(): List<MovieDTO>
    + saveMovies(List<MovieDTO>)
}

class Utils {
    + convertToEntity(MovieDTO): Movie
}

class MovieRepository {
    + save(Movie)
}

class MovieDTO {
    + title: String
    + overview: String
    + releaseDate: String
    + genreIds: List<Integer>
    + posterPath: String
    + voteAverage: Double
}

class Movie {
    + title: String
    + overview: String
    + releaseDate: LocalDate
    + genre: String
    + posterPath: String
    + voteAverage: Double
}

MovieService --> MovieRepository
MovieService --> Utils
Utils --> Movie
MovieDTO --> Movie
@enduml

* Class Diagram - Project Structure
* What it shows:
 How different classes (MovieService, MovieDTO, Movie, MovieRepository, etc.) interact.
 Relationships between DTOs, Entities, Services, and the Repository.